--- a/main.scss
+++ b/main.scss
@@ -67,10 +67,6 @@ header {
                 font-size: 20px;
                 font-weight: 600;
                 color: #808397;
-
-                // &:first-child {
-                //     color: red;
-                // }
             }
 
             & li:last-child a {
@@ -134,5 +130,115 @@ header {
     100% {
         transform: translateX(calc(100% + 25px));
     }
+}
+
+
+
+
+.about-service {
+    @include flex-column;
+}
+
+.img-div {
+    width: 100%;
+    height: 310px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.service-disc {
+    text-align: center;
+    padding: 65px 24px;
+    box-sizing: border-box;
+
+    h2 {
+        font-size: 32px;
+        font-weight: 900;
+        color: #24303E;
+    }
+
+    p {
+        font-size: 18px;
+        font-weight: 600;
+        color: #808397;
+        line-height: 30px;
+        margin-top: 24px;
+    }
+
+    .learn-more {
+        position: relative;
+        max-width: fit-content;
+        margin: auto;
+        margin-top: 32px;
+        
+        a {
+            font-size: 15px;
+            font-weight: 900;
+            color: #24303E;
+        }
+
+        .background-line {
+            width: 110%;
+            height: 7px;
+            position: absolute;
+            z-index: -1;
+            bottom: -1px;
+            left: -5%;
+            opacity: 0.25;
+            border-radius: 28px;
+        }
+    }
+}
+
+.yellow-line {
+    background-color: #FAD400;
+}
+
+.red-line {
+    background-color: #FE7766;
+}
+
+.egg-img {
+    background-image: url(./images/mobile/image-transform.jpg);
+}
+
+.stend-out-img {
+    background-image: url(./images/mobile/image-stand-out.jpg);
+}
+
+
+.with-backgr-img {
+    background-position: top;
+    background-size: cover;
+
+}
+
+.cherry-backgr {
+    background-image: url(./images/mobile/image-graphic-design.jpg);
+
+    h2 {
+        margin-top: 370px;
+        color: #24554A;
+    }
+
+    p {
+        color: #24554A;
+    }
+}
+
+
+.orange-backgr {
+    background-image: url(./images/mobile/image-photography.jpg);
+
+    h2 {
+        margin-top: 370px;
+        color: #052C3B;
+    }
+
+    p {
+        color: #052C3B;
+    }
+
 }
 
