--- a/main.scss
+++ b/main.scss
@@ -300,3 +300,15 @@ header {
 
 
 }
+
+
+.images {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+
+    img {
+        width: 100%;
+        height: 100%;
+    }
+}
