--- a/style.css
+++ b/style.css
@@ -209,3 +209,28 @@ header {
   .images img {
     width: 100%;
     height: 100%; }
+
+footer {
+  padding: 65px 24px;
+  box-sizing: border-box;
+  text-align: center;
+  background-color: #90D4C6; }
+  footer ul {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 40px; }
+    footer ul a {
+      color: #458D7E;
+      font-size: 18px;
+      font-weight: 600; }
+  footer .social-media {
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+    margin-top: 88px; }
+    footer .social-media svg {
+      fill: #2C7566;
+      cursor: pointer;
+      transition: all 0.2s; }
+      footer .social-media svg:hover {
+        fill: #fff; }
